tests/fail/elaboration/unification/mismatch/record-literal-singleton.snap
stdout = ''
stderr = '''
error: type mismatch
  ┌─ tests/fail/elaboration/unification/mismatch/record-literal-singleton.fathom:6:11
  │
6 │ { thing = unit } : { thing : Type }
  │           ^^^^

'''
